Fixed social icons links

--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
                     </a>
                 </li>
                 <li class="footer-nav__item">
-                    <a href="https://twitter.com/">
+                    <a href="https://www.instagram.com/">
                         <svg class="footer-nav__icon icon-list"><use xlink:href="images/svg/sprite.svg#icon-instagram-with-circle"></use></svg>
                     </a>                        
                 </li>
                 <li class="footer-nav__item">
-                    <a href="https://www.instagram.com/">
+                    <a href="https://www.twitter.com/">
                         <svg class="footer-nav__icon icon-list"><use xlink:href="images/svg/sprite.svg#icon-twitter-with-circle"></use></svg>
                     </a>                        
                 </li>
